cmake_minimum_required(VERSION 3.13)
project(fdf C)

set(CMAKE_C_STANDARD 99)
SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -Werror -lmlx -framework OpenGL -framework AppKit")
AUX_SOURCE_DIRECTORY(libft LIB)
AUX_SOURCE_DIRECTORY(minilibx_macos MLX)
add_executable(fdf ${LIB} ${MLX} main.c fdf.c ft_count.c)
link_libraries(libft/libft.a)
link_libraries(minilibx_macos/libmlx.a)