cmake_minimum_required(VERSION 3.13)
project(fdf C)

set(CMAKE_C_STANDARD 99)
SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -Werror -lmlx -framework OpenGL -framework AppKit")
AUX_SOURCE_DIRECTORY(libft LIB)
AUX_SOURCE_DIRECTORY(minilibx_macos MLX)
add_executable(fdf ${LIB} ${MLX} main.c fdf.h fdf.c ft_count.c ft_paint.c create_and_free.c ft_rotate.c menu.c bonus.c)
link_libraries(libft/libft.a)
link_libraries(minilibx_macos/libmlx.a)